Fix header spacing (i guess dev mode fucked it up)

--- a/app/assets/stylesheets/application/layout.css.scss
+++ b/app/assets/stylesheets/application/layout.css.scss
@@ -29,7 +29,7 @@ a#logo {
 #wrapper {
   // position: relative;
   @include background-image(linear-gradient(#1F2117, #23241A 2px, #313327 150px));
-  margin-top: 123px;
+  margin-top: 139px;
 }
 
 #content {
